-----------
v4.2.22-git
-----------

[jan] Work around calendar servers advertising as CalDAV-capable, but ignoring
      CalDAV requests (Bug #14662).
[jan] Fix displaying yesterday's event in Prior Events portal block
      (admin@layertec.de, Bug #14638).


-------
v4.2.21
-------

[mjr] Don't hide the reservee's identity on the resource calendar (Bug #14609).


-------
v4.2.20
-------

[mjr] Fix saving sync preference when no default calendar exists (Bug #14585).
[mjr] Fix display of date in ITIP_CANCEL notifications of deleted instances of
      recurring events (PR: 214, almarin@um.es).


-------
v4.2.19
-------

[mjr] Fix allowing ics import on when user has edit permissions on a shared
      calendar (Bug #14501).
[jan] Disallow setting of creator permissions too if sharing with world is
      disabled.
[jan] Split shared users by linebreaks too.


-------
v4.2.18
-------

[mjr] Fix potential memory issue with really long events (Bug #14453).
[mjr] Fix setting DELETE permissions (Bug #14447).
[mjr] More fixes and improvements related to preventing empty date values.
[jan] Fix losing shared users when adding invalid user name (Bug #14415).
[mjr] Fix displaying tag search results (Bug #14412).
[jan] Fix sender of event change notification messages.


-------
v4.2.17
-------

[jan] Update Portuguese translation.
[jan] Update Basque translation.
[mjr] Fix issue where it is possible to save an event with an empty start or
      end date on some browsers.
[mjr] Require Horde_Perms::DELETE for including a calendar as sync-able.
[mjr] Fix end date when toggling an all day event off (Bug #13979).
[jan] Fix showing error message if loading of remote calendars failed.


-------
v4.2.16
-------

[mjr] Fix updating list of resource calendars in resource group dialog (Bug
      #14281).
[jan] Fixed several issues with resource management.
[jan] Update Greek translation (Limperis Antonis <limperis@cti.gr>).


-------
v4.2.15
-------
