@@ -36,8 +36,7 @@ case 'DeleteEvent':
 case 'EditEvent':
     if ($view->event->private &&
         $view->event->creator != $GLOBALS['registry']->getAuth()) {
-        $url = $url = Horde_Util::getFormData('url');
-        if (!empty($url)) {
+        if ($url = Horde::verifySignedUrl(Horde_Util::getFormData('url'))) {
             $url = new Horde_Url($url, true);
         } else {
             $url = Horde::url($prefs->getValue('defaultview') . '.php', true);
