@@ -16,7 +16,7 @@ if (Kronolith::getDefaultCalendar(Horde_Perms::EDIT) &&
      $GLOBALS['injector']->getInstance('Horde_Core_Perms')->hasAppPermission('max_events') > Kronolith::countEvents())) {
     echo Horde::url('new.php')
         ->add(array('date' => $day->dateString(),
-                    'url' => $this->link(0, true)))
+                    'url' => Horde::signUrl($this->link(0, true))))
         ->link(array('title' => _("Create a New Event"),
                      'class' => 'iconAdd'))
         . Horde::img('new_small.png', '+')
